--- a/Sample/index.html
+++ b/Sample/index.html
@@ -10,11 +10,9 @@
 
   <canvas canvas-gauge
    id="myCanvas"
+   width="{{gauge.width}}"
+   height="{{gauge.height}}"
    data-value="{{gauge.value}}"
-   data-width="{{gauge.width}}"
-   data-height="{{gauge.height}}"
-   data-min-value="{{gauge.minValue}}"
-   data-max-value="{{gauge.maxValue}}"
   ></canvas>
 
   <script type="text/javascript" src="angular.min.js"></script>
@@ -28,14 +26,11 @@
       $scope.gauge = {
         value: 50,
         width: 300,
-        height: 300,
-        minValue: 1,
-        maxValue: 100
+        height: 300
       };
 
       $interval(function() {
         $scope.gauge.value =  Math.round(Math.random() * (100 - 1) + 1);
-        console.info($scope.gauge.value);
       }, 1000);
     }]);
   </script>
