--- a/Sample/index.html
+++ b/Sample/index.html
@@ -13,6 +13,46 @@
    width="{{gauge.width}}"
    height="{{gauge.height}}"
    data-value="{{gauge.value}}"
+   data-title="Speed"
+   data-min-value="0"
+   data-max-value="220"
+   data-major-ticks="0 20 40 60 80 100 120 140 160 180 200 220"
+   data-minor-ticks="2"
+   data-stroke-ticks="true"
+   data-units="Km/h"
+   data-value-format="3.2"
+   data-glow="true"
+   data-animation-delay="10"
+   data-animation-duration="200"
+   data-animation-fn="bounce"
+   data-colors-needle="#f00 #00f"
+   data-highlights="0 30 #eee, 30 60 #ccc, 60 90 #aaa, 90 220 #eaa"
+   data-circles-outervisible="true"
+   data-circles-middlevisible="true"
+   data-circles-innervisible="true"
+   data-valuebox-visible="true"
+   data-valuetext-visible="true"
+   data-colors-needle-start="rgba(240, 128, 128, 1)"
+   data-colors-needle-end="rgba(255, 160, 122, .9)"
+   data-colors-needle-shadowup="rgba(2, 255, 255, 0.2)"
+   data-colors-needle-shadowdown="rgba(188, 143, 143, 0.45)"
+   data-colors-needle-circle-outerstart="#f0f0f0"
+   data-colors-needle-circle-outerend="#ccc"
+   data-colors-needle-circle-innerstart="#e8e8e8"
+   data-colors-needle-circle-innerend="#f5f5f5"
+   data-colors-valuebox-rectstart="#888"
+   data-colors-valuebox-rectend="#666"
+   data-colors-valuebox-background="#babab2"
+   data-colors-valuebox-shadow="rgba(0, 0, 0, 1)"
+   data-colors-valuetext-foreground="#444"
+   data-colors-valuetext-shadow="rgba(0, 0, 0, 0.3)"
+   data-colors-circle-shadow="rgba(0, 0, 0, 0.3)"
+   data-colors-circle-outerstart="#ddd"
+   data-colors-circle-outerend="#aaa"
+   data-colors-circle-middlestart="#eee"
+   data-colors-circle-middleend="#f0f0f0"
+   data-colors-circle-innerstart="#fafafa"
+   data-colors-circle-innerend="#ccc"
   ></canvas>
 
   <script type="text/javascript" src="angular.min.js"></script>
