example with bower

--- a/Sample/index.html
+++ b/Sample/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
- <head>   
+ <head>
   <meta charset="utf-8" />
-  <meta name="viewport" 
+  <meta name="viewport"
    content="width=device-width, initial-scale=1" />
   <title>angular-canvas-gauge sample</title>
  </head>
@@ -55,8 +55,8 @@
    data-colors-circle-innerend="#ccc"
   ></canvas>
 
-  <script type="text/javascript" src="angular.min.js"></script>
-  <script type="text/javascript" src="canv-gauge.js"></script>
+  <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
+  <script type="text/javascript" src="../bower_components/canv-gauge/gauge.js"></script>
   <script type="text/javascript" src="../angular-canvas-gauge.js"></script>
 
   <script>
